<resources>
    <!--<string name="app_name">Teacher</string>-->
    <string name="app_name">Videtoteca para creadores</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Mis Cursos</string>
    <string name="menu_gallery">Subir Video</string>
    <string name="menu_slideshow">Acerca de </string>
    <string name="menu_out">Salir</string>

    <string name="prompt_text">Identificación de usuario</string>
    <string name="title_activity_curso">CursoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- SUBIR VIDEO -->
    <string name="curso">Curso</string>
    <string name="subir_video">Subir video</string>
    <string name="seleccionar_video">Seleccionar video</string>
    <string name="hint_seleccionar_video">Seleccione un Video ...</string>
    <string name="titulo_video">Tìtulo</string>
    <string name="descripcion_video">Descripcion</string>
    <string name="registrar_video">Registrar video</string>
    <string name="cancelar">Cancelar</string>
</resources>