<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.subirvideo.SubirVideoActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTituloCurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curso"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNombreCurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Titulo del Curso" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUploadVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardview_vertical_margin"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintTop_toBottomOf="@+id/cvCurso"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtSubirVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subir_video"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button android:id="@+id/btnUploadVideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seleccionar_video"/>
                <TextView
                    android:id="@+id/txtVideoPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_seleccionar_video"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <VideoView
                android:id="@+id/videoSeleccionado"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvInformacionVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardview_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/cvUploadVideo">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtTituloVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_video"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/tituloVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtDescripcionVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_video"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/descripcionVideo"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/btnRegistrarVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrar_video" />
        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <Button
            android:id="@+id/btnCancelarRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>